// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rule inventory snapshot > next variant with storybook false 1`] = `
{
  "@next": [
    "@next/next/google-font-display",
    "@next/next/google-font-preconnect",
    "@next/next/inline-script-id",
    "@next/next/next-script-for-ga",
    "@next/next/no-assign-module-variable",
    "@next/next/no-async-client-component",
    "@next/next/no-before-interactive-script-outside-document",
    "@next/next/no-css-tags",
    "@next/next/no-document-import-in-page",
    "@next/next/no-duplicate-head",
    "@next/next/no-head-element",
    "@next/next/no-head-import-in-document",
    "@next/next/no-html-link-for-pages",
    "@next/next/no-img-element",
    "@next/next/no-page-custom-font",
    "@next/next/no-script-component-in-head",
    "@next/next/no-styled-jsx-in-document",
    "@next/next/no-sync-scripts",
    "@next/next/no-title-in-document-head",
    "@next/next/no-typos",
    "@next/next/no-unwanted-polyfillio",
  ],
  "@typescript-eslint": [
    "@typescript-eslint/ban-ts-comment",
    "@typescript-eslint/no-array-constructor",
    "@typescript-eslint/no-duplicate-enum-values",
    "@typescript-eslint/no-empty-object-type",
    "@typescript-eslint/no-explicit-any",
    "@typescript-eslint/no-extra-non-null-assertion",
    "@typescript-eslint/no-misused-new",
    "@typescript-eslint/no-namespace",
    "@typescript-eslint/no-non-null-asserted-optional-chain",
    "@typescript-eslint/no-require-imports",
    "@typescript-eslint/no-this-alias",
    "@typescript-eslint/no-unnecessary-type-assertion",
    "@typescript-eslint/no-unnecessary-type-constraint",
    "@typescript-eslint/no-unsafe-declaration-merging",
    "@typescript-eslint/no-unsafe-function-type",
    "@typescript-eslint/no-unused-expressions",
    "@typescript-eslint/no-unused-vars",
    "@typescript-eslint/no-wrapper-object-types",
    "@typescript-eslint/prefer-as-const",
    "@typescript-eslint/prefer-namespace-keyword",
    "@typescript-eslint/triple-slash-reference",
  ],
  "core": [
    "for-direction",
    "max-lines",
    "max-lines-per-function",
    "no-async-promise-executor",
    "no-case-declarations",
    "no-compare-neg-zero",
    "no-cond-assign",
    "no-constant-binary-expression",
    "no-constant-condition",
    "no-control-regex",
    "no-debugger",
    "no-delete-var",
    "no-dupe-else-if",
    "no-duplicate-case",
    "no-empty",
    "no-empty-character-class",
    "no-empty-pattern",
    "no-empty-static-block",
    "no-ex-assign",
    "no-extra-boolean-cast",
    "no-fallthrough",
    "no-global-assign",
    "no-invalid-regexp",
    "no-irregular-whitespace",
    "no-loss-of-precision",
    "no-misleading-character-class",
    "no-nonoctal-decimal-escape",
    "no-octal",
    "no-prototype-builtins",
    "no-regex-spaces",
    "no-self-assign",
    "no-shadow-restricted-names",
    "no-sparse-arrays",
    "no-unreachable",
    "no-unsafe-finally",
    "no-unsafe-optional-chaining",
    "no-unused-labels",
    "no-unused-private-class-members",
    "no-useless-backreference",
    "no-useless-catch",
    "no-useless-escape",
    "no-var",
    "prefer-const",
    "prefer-rest-params",
    "prefer-spread",
    "require-yield",
    "sort-imports",
    "use-isnan",
    "valid-typeof",
  ],
  "import-x": [
    "import-x/first",
    "import-x/no-duplicates",
    "import-x/order",
  ],
  "kj": [
    "kj/no-multi-comp",
    "kj/no-pure-type-alias",
    "kj/no-single-export-barrel",
    "kj/no-weak-typeof-satisfies",
  ],
  "perfectionist": [
    "perfectionist/sort-jsx-props",
  ],
  "react": [
    "react/display-name",
    "react/jsx-key",
    "react/jsx-no-comment-textnodes",
    "react/jsx-no-duplicate-props",
    "react/jsx-no-target-blank",
    "react/jsx-no-undef",
    "react/jsx-uses-vars",
    "react/no-children-prop",
    "react/no-danger-with-children",
    "react/no-deprecated",
    "react/no-direct-mutation-state",
    "react/no-find-dom-node",
    "react/no-is-mounted",
    "react/no-render-return-value",
    "react/no-string-refs",
    "react/no-unescaped-entities",
    "react/no-unknown-property",
    "react/require-render-return",
  ],
  "react-hooks": [
    "react-hooks/exhaustive-deps",
    "react-hooks/rules-of-hooks",
  ],
  "react-refresh": [
    "react-refresh/only-export-components",
  ],
}
`;

exports[`rule inventory snapshot > storybook true adds only storybook-prefixed rules on *.stories.tsx 1`] = `
[
  "storybook/await-interactions",
  "storybook/context-in-play-function",
  "storybook/default-exports",
  "storybook/hierarchy-separator",
  "storybook/no-redundant-story-name",
  "storybook/no-renderer-packages",
  "storybook/prefer-pascal-case",
  "storybook/story-exports",
  "storybook/use-storybook-expect",
  "storybook/use-storybook-testing-library",
]
`;

exports[`rule inventory snapshot > vite variant with storybook false 1`] = `
{
  "@typescript-eslint": [
    "@typescript-eslint/ban-ts-comment",
    "@typescript-eslint/no-array-constructor",
    "@typescript-eslint/no-duplicate-enum-values",
    "@typescript-eslint/no-empty-object-type",
    "@typescript-eslint/no-explicit-any",
    "@typescript-eslint/no-extra-non-null-assertion",
    "@typescript-eslint/no-misused-new",
    "@typescript-eslint/no-namespace",
    "@typescript-eslint/no-non-null-asserted-optional-chain",
    "@typescript-eslint/no-require-imports",
    "@typescript-eslint/no-this-alias",
    "@typescript-eslint/no-unnecessary-type-assertion",
    "@typescript-eslint/no-unnecessary-type-constraint",
    "@typescript-eslint/no-unsafe-declaration-merging",
    "@typescript-eslint/no-unsafe-function-type",
    "@typescript-eslint/no-unused-expressions",
    "@typescript-eslint/no-unused-vars",
    "@typescript-eslint/no-wrapper-object-types",
    "@typescript-eslint/prefer-as-const",
    "@typescript-eslint/prefer-namespace-keyword",
    "@typescript-eslint/triple-slash-reference",
  ],
  "core": [
    "for-direction",
    "max-lines",
    "max-lines-per-function",
    "no-async-promise-executor",
    "no-case-declarations",
    "no-compare-neg-zero",
    "no-cond-assign",
    "no-constant-binary-expression",
    "no-constant-condition",
    "no-control-regex",
    "no-debugger",
    "no-delete-var",
    "no-dupe-else-if",
    "no-duplicate-case",
    "no-empty",
    "no-empty-character-class",
    "no-empty-pattern",
    "no-empty-static-block",
    "no-ex-assign",
    "no-extra-boolean-cast",
    "no-fallthrough",
    "no-global-assign",
    "no-invalid-regexp",
    "no-irregular-whitespace",
    "no-loss-of-precision",
    "no-misleading-character-class",
    "no-nonoctal-decimal-escape",
    "no-octal",
    "no-prototype-builtins",
    "no-regex-spaces",
    "no-self-assign",
    "no-shadow-restricted-names",
    "no-sparse-arrays",
    "no-unreachable",
    "no-unsafe-finally",
    "no-unsafe-optional-chaining",
    "no-unused-labels",
    "no-unused-private-class-members",
    "no-useless-backreference",
    "no-useless-catch",
    "no-useless-escape",
    "no-var",
    "prefer-const",
    "prefer-rest-params",
    "prefer-spread",
    "require-yield",
    "sort-imports",
    "use-isnan",
    "valid-typeof",
  ],
  "import-x": [
    "import-x/first",
    "import-x/no-duplicates",
    "import-x/order",
  ],
  "kj": [
    "kj/no-multi-comp",
    "kj/no-pure-type-alias",
    "kj/no-single-export-barrel",
    "kj/no-weak-typeof-satisfies",
  ],
  "perfectionist": [
    "perfectionist/sort-jsx-props",
  ],
  "react-dom": [
    "react-dom/no-dangerously-set-innerhtml",
    "react-dom/no-dangerously-set-innerhtml-with-children",
    "react-dom/no-find-dom-node",
    "react-dom/no-flush-sync",
    "react-dom/no-hydrate",
    "react-dom/no-render",
    "react-dom/no-render-return-value",
    "react-dom/no-script-url",
    "react-dom/no-unsafe-iframe-sandbox",
    "react-dom/no-use-form-state",
    "react-dom/no-void-elements-with-children",
  ],
  "react-hooks": [
    "react-hooks/exhaustive-deps",
    "react-hooks/rules-of-hooks",
  ],
  "react-refresh": [
    "react-refresh/only-export-components",
  ],
  "react-x": [
    "react-x/error-boundaries",
    "react-x/exhaustive-deps",
    "react-x/no-access-state-in-setstate",
    "react-x/no-array-index-key",
    "react-x/no-children-count",
    "react-x/no-children-for-each",
    "react-x/no-children-map",
    "react-x/no-children-only",
    "react-x/no-children-to-array",
    "react-x/no-clone-element",
    "react-x/no-component-will-mount",
    "react-x/no-component-will-receive-props",
    "react-x/no-component-will-update",
    "react-x/no-context-provider",
    "react-x/no-create-ref",
    "react-x/no-direct-mutation-state",
    "react-x/no-forward-ref",
    "react-x/no-missing-key",
    "react-x/no-nested-component-definitions",
    "react-x/no-nested-lazy-component-declarations",
    "react-x/no-set-state-in-component-did-mount",
    "react-x/no-set-state-in-component-did-update",
    "react-x/no-set-state-in-component-will-update",
    "react-x/no-unnecessary-use-prefix",
    "react-x/no-unsafe-component-will-mount",
    "react-x/no-unsafe-component-will-receive-props",
    "react-x/no-unsafe-component-will-update",
    "react-x/no-unused-class-component-members",
    "react-x/no-use-context",
    "react-x/purity",
    "react-x/rules-of-hooks",
    "react-x/set-state-in-effect",
    "react-x/set-state-in-render",
    "react-x/static-components",
    "react-x/unsupported-syntax",
    "react-x/use-memo",
    "react-x/use-state",
  ],
}
`;
